--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -4,90 +4,90 @@
 		<label index="panelWidget.title.progress">Steps of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
-		<label index="install.eula">End user license agreement for todoyu</label>
-		<label index="install.lgpl">The following third party libraries are licensed under LGPL v2.1</label>
-		<label index="install.title">todoyu installer</label>
-		<label index="install.button">I accept, install todoyu</label>
-		<label index="install.text">Welcome to the todoyu installer!</label>
-		<label index="install.step">todoyu licence</label>
+		<label index="install.eula">End Eser License Agreement for todoyu</label>
+		<label index="install.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
+		<label index="install.title">todoyu Installer</label>
+		<label index="install.button">I Accept, Install todoyu</label>
+		<label index="install.text">Welcome to the todoyu Tnstaller!</label>
+		<label index="install.step">todoyu Licence</label>
 		<label index="servercheck.title">Server Check</label>
 		<label index="servercheck.button">Setup Database Configuration</label>
-		<label index="servercheck.yourphpversion">Your version</label>
+		<label index="servercheck.yourphpversion">Your Version</label>
 		<label index="servercheck.yourphpversion.ok">OK</label>
 		<label index="servercheck.yourphpversion.error">TOO LOW</label>
-		<label index="servercheck.writableCheck">Folders / files writable</label>
+		<label index="servercheck.writableCheck">Folders / Files Writable</label>
 		<label index="servercheck.writable">writable</label>
 		<label index="servercheck.notWritable">NOT WRITABLE</label>
-		<label index="servercheck.ready">Server is ready for todoyu 2.0</label>
-		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
-		<label index="servercheck.step">Check server</label>
+		<label index="servercheck.ready">Server is Ready for todoyu 2.0</label>
+		<label index="servercheck.notReady">Server is NOT Ready for todoyu 2.0</label>
+		<label index="servercheck.step">Check Server</label>
 		<label index="dbconnection.title">Setup Database Server Connection</label>
-		<label index="dbconnection.button">Update database configuration</label>
+		<label index="dbconnection.button">Update Database Configuration</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Username</label>
 		<label index="dbconnection.password">Password</label>
-		<label index="dbconnection.text">Enter your database connection data</label>
-		<label index="dbconnection.step">Setup DB connection</label>
-		<label index="dbselect.title">Select database</label>
+		<label index="dbconnection.text">Enter Your Database Connection Data</label>
+		<label index="dbconnection.step">Setup Database Connection</label>
+		<label index="dbselect.title">Select Database</label>
 		<label index="dbselect.button">Save Database Setup</label>
-		<label index="dbselect.text">Please select a existing database or create a new one for todoyu</label>
-		<label index="dbselect.text.saved">Database connection saved</label>
-		<label index="dbselect.text.notCreated">Cannot create new database on server</label>
-		<label index="dbselect.text.dbNameExists">A database with this name already exists</label>
+		<label index="dbselect.text">Please Select an Existing Database or Create a new one for todoyu</label>
+		<label index="dbselect.text.saved">Database Connection Saved</label>
+		<label index="dbselect.text.notCreated">Cannot Create new Database on Server</label>
+		<label index="dbselect.text.dbNameExists">A Database With This Name Already Exists</label>
 		<label index="dbselect.selectDB">Select a Database</label>
-		<label index="dbselect.orCreateDB">or create new:</label>
-		<label index="dbselect.step">Select database</label>
-		<label index="importtables.title">Import tables and data</label>
-		<label index="importtables.button">Import tables and data</label>
+		<label index="dbselect.orCreateDB">or Create new:</label>
+		<label index="dbselect.step">Select Database</label>
+		<label index="importtables.title">Import Tables and Data</label>
+		<label index="importtables.button">Import Tables and Data</label>
 		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
 		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
-		<label index="importtables.text">Import basic todoyu tables</label>
-		<label index="importtables.step">Import database tables</label>
-		<label index="systemconfig.title">todoyu system settings</label>
-		<label index="systemconfig.button">Save system configuration</label>
+		<label index="importtables.text">Import Basic todoyu Tables</label>
+		<label index="importtables.step">Import Database Tables</label>
+		<label index="systemconfig.title">todoyu System Settings</label>
+		<label index="systemconfig.button">Save System Configuration</label>
 		<label index="systemconfig.name">System Name</label>
 		<label index="systemconfig.email">System Email</label>
 		<label index="systemconfig.language">Language</label>
 		<label index="systemconfig.locale">Locale</label>
-		<label index="systemconfig.text">Select your todoyu system settings</label>
-		<label index="systemconfig.text.error">Please enter a system name and email</label>
-		<label index="systemconfig.step">Configure system</label>
-		<label index="adminpassword.title">Change admin password</label>
-		<label index="adminpassword.button">Change admin password</label>
+		<label index="systemconfig.text">Select Your todoyu System Settings</label>
+		<label index="systemconfig.text.error">Please Enter a System Name and Email</label>
+		<label index="systemconfig.step">Configure System</label>
+		<label index="adminpassword.title">Change Admin Password</label>
+		<label index="adminpassword.button">Change Admin Password</label>
 		<label index="adminpassword.username">Username</label>
 		<label index="adminpassword.password">Password</label>
 		<label index="adminpassword.repeatPassword">Repeat Password</label>
-		<label index="adminpassword.passwordHint">at least 5 characters</label>
-		<label index="adminpassword.text">Please enter the new admin password twice</label>
-		<label index="adminpassword.step">Set admin password</label>
-		<label index="demodata.title">Import demo data</label>
-		<label index="demodata.checkboxlabel">Import the demo data</label>
-		<label index="demodata.button">Next step</label>
-		<label index="demodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a clean installation you can customize for yourself</label>
-		<label index="demodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and more.</label>
-		<label index="demodata.step">Import demo data</label>
-		<label index="finish.title">Installation finished</label>
-		<label index="finish.text">Installation finished</label>
-		<label index="finish.button">Disable installer and go to login</label>
-		<label index="finish.step">Finish installation</label>
-		<label index="update.title">todoyu version update</label>
-		<label index="update.button">Start update</label>
-		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
-		<label index="update.step">Update todoyu installation</label>
-		<label index="updatetocurrentversion.title">Update database</label>
-		<label index="updatetocurrentversion.button">Apply database changes</label>
-		<label index="updatetocurrentversion.button.noupdates">No updates, next</label>
-		<label index="updatetocurrentversion.noupdates">Your database is up-to-date. No updates necessary</label>
-		<label index="updatetocurrentversion.updates">Your database needs to be updated with the following changes</label>
-		<label index="updatetocurrentversion.step">Update database structure</label>
-		<label index="updatetocurrentversion.newTables">New tables</label>
-		<label index="updatetocurrentversion.newColumns">New columns</label>
-		<label index="updatetocurrentversion.changedColumns">Modified columns</label>
-		<label index="updatetocurrentversion.missingKeys">Missing table keys (indexes)</label>
-		<label index="finishupdate.title">Finish update</label>
-		<label index="finishupdate.button">Disable installer and go to login</label>
-		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
-		<label index="finishupdate.step">Finish installation</label>
+		<label index="adminpassword.passwordHint">at least 5 Characters</label>
+		<label index="adminpassword.text">Please Enter the new Admin Password Twice</label>
+		<label index="adminpassword.step">Set Admin Password</label>
+		<label index="demodata.title">Import Demo Data</label>
+		<label index="demodata.checkboxlabel">Import the Demo Data</label>
+		<label index="demodata.button">Next Step</label>
+		<label index="demodata.text">You can Import the Demo Data to Start Testing Right After you Logged in. Without the Demo Data, you Have a Clean Installation you can Customize to Your Needs</label>
+		<label index="demodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and More.</label>
+		<label index="demodata.step">Import Demo Data</label>
+		<label index="finish.title">Installation Finished</label>
+		<label index="finish.text">Installation Finished</label>
+		<label index="finish.button">Disable Installer and Switch to Login</label>
+		<label index="finish.step">Finish Installation</label>
+		<label index="update.title">todoyu Version Update</label>
+		<label index="update.button">Start Update</label>
+		<label index="update.info">Apply Database Changes for Your Current Version and Compare Current Columns with File Configuration</label>
+		<label index="update.step">Update todoyu Installation</label>
+		<label index="updatetocurrentversion.title">Update Database</label>
+		<label index="updatetocurrentversion.button">Apply Database Changes</label>
+		<label index="updatetocurrentversion.button.noupdates">No Updates, next</label>
+		<label index="updatetocurrentversion.noupdates">Congratulations, Your Database is up-to-date. No Updates Necessary</label>
+		<label index="updatetocurrentversion.updates">Your Database Needs to be Updated with the Following Changes</label>
+		<label index="updatetocurrentversion.step">Update Database Structure</label>
+		<label index="updatetocurrentversion.newTables">New Tables</label>
+		<label index="updatetocurrentversion.newColumns">New Columns</label>
+		<label index="updatetocurrentversion.changedColumns">Modified Columns</label>
+		<label index="updatetocurrentversion.missingKeys">Missing Table Keys (Indexes)</label>
+		<label index="finishupdate.title">Finish Update</label>
+		<label index="finishupdate.button">Disable Installer and Switch to Login</label>
+		<label index="finishupdate.text">Installer has Updated Your todoyu Installation</label>
+		<label index="finishupdate.step">Finish Installation</label>
 	</labels>
 	<labels lang="de">
 		<label index="panelWidget.title.progress">Installationsschritte</label>
