--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -11,8 +11,8 @@
 		<label index="description">Description</label>
 		<label index="date">Date</label>
 		<label index="dateFormat">y.n.j</label>
-		<label index="quickcreate.title">Quick create records</label>
-		<label index="quickcreate.alltypes.label">All data types:</label>
+		<label index="quickcreate.title">Create</label>
+		<label index="quickcreate.alltypes.label">All Data Types:</label>
 		<label index="create">Create</label>
 		<label index="createNew">Create new</label>
 		<label index="edit">Edit</label>
@@ -20,7 +20,7 @@
 		<label index="save">Save</label>
 		<label index="cancel">Cancel</label>
 		<label index="delete">Delete</label>
-		<label index="deleteRecord">Delete record</label>
+		<label index="deleteRecord">Delete Record</label>
 		<label index="show">Show</label>
 		<label index="hide">Hide</label>
 		<label index="unhide">Unhide</label>
@@ -52,9 +52,9 @@
 		<label index="noAccess.goBackToLastPage">Go back to last page</label>
 		<label index="noAccess.contactAdmin">If you think should have access, report the following data to your todoyu administrator:</label>
 		<label index="noAccess.requestURL">Request URL</label>
-		<label index="noAccess.missingRight">Missing right</label>
+		<label index="noAccess.missingRight">Missing Right</label>
 		<label index="footer.version">Version</label>
-		<label index="footer.bugreport">Report a bug</label>
+		<label index="footer.bugreport">Report A Bug</label>
 		<label index="footer.bugreport.title">Use the todoyu bugtracker to add a bugreport</label>
 		<label index="footer.forum">Discuss in the forum</label>
 		<label index="footer.forum.title">Find help or share your ideas</label>
@@ -65,7 +65,7 @@
 		<label index="footer.devmanual">Dev</label>
 		<label index="footer.devmanual.title">Manual for developers and other smart people</label>
 		<label index="paging.page">Page</label>
-		<label index="input.autocompleter">Autocompleting input</label>
+		<label index="input.autocompleter">Autocompleting Input</label>
 		<label index="ajax.requestFailed">Cannot connect to server (your connection or server down?)</label>
 		<label index="roles">Roles</label>
 		<label index="role">Role</label>
