* locale typo fixes

--- a/core/locale/static_country_zone.xml
+++ b/core/locale/static_country_zone.xml
@@ -8,7 +8,7 @@
 		<label index="USA.AR.localname">Arkansas</label>
 		<label index="USA.AF.localname">Armed Forces Africa</label>
 		<label index="USA.AA.localname">Armed Forces Americas</label>
-		<label index="USA.AC.localname">Armed Forces Canada fdsafds</label>
+		<label index="USA.AC.localname">Armed Forces Canada</label>
 		<label index="USA.AE.localname">Armed Forces Europe</label>
 		<label index="USA.AM.localname">Armed Forces Middle East</label>
 		<label index="USA.AP.localname">Armed Forces Pacific</label>
@@ -130,37 +130,37 @@
 		<label index="CHE.VS.localname">Wallis</label>
 		<label index="CHE.ZG.localname">Zug</label>
 		<label index="CHE.ZH.localname">Zürich</label>
-		<label index="ESP.Alava.localname">Alava</label>
-		<label index="ESP.Malaga.localname">Malaga</label>
+		<label index="ESP.Alava.localname">Álava</label>
+		<label index="ESP.Malaga.localname">Málaga</label>
 		<label index="ESP.Segovia.localname">Segovia</label>
 		<label index="ESP.Granada.localname">Granada</label>
-		<label index="ESP.Jaen.localname">Jaen</label>
+		<label index="ESP.Jaen.localname">Jaén</label>
 		<label index="ESP.Sevilla.localname">Sevilla</label>
 		<label index="ESP.Barcelona.localname">Barcelona</label>
 		<label index="ESP.Valencia.localname">Valencia</label>
 		<label index="ESP.Alicante.localname">Alicante</label>
-		<label index="ESP.Almeria.localname">Almeria</label>
+		<label index="ESP.Almeria.localname">Almería</label>
 		<label index="ESP.Asturias.localname">Asturias</label>
-		<label index="ESP.Avila.localname">Avila</label>
+		<label index="ESP.Avila.localname">Ávila</label>
 		<label index="ESP.Badajoz.localname">Badajoz</label>
 		<label index="ESP.Burgos.localname">Burgos</label>
-		<label index="ESP.Caceres.localname">Caceres</label>
-		<label index="ESP.Cadiz.localname">Cadiz</label>
+		<label index="ESP.Caceres.localname">Cáceres</label>
+		<label index="ESP.Cadiz.localname">Cádiz</label>
 		<label index="ESP.Cantabria.localname">Cantabria</label>
-		<label index="ESP.Castellon.localname">Castellon</label>
+		<label index="ESP.Castellon.localname">Castellón</label>
 		<label index="ESP.Ceuta.localname">Ceuta</label>
 		<label index="ESP.Ciudad Real.localname">Ciudad Real</label>
-		<label index="ESP.Cordoba.localname">Cordoba</label>
+		<label index="ESP.Cordoba.localname">Córdoba</label>
 		<label index="ESP.Cuenca.localname">Cuenca</label>
 		<label index="ESP.Girona.localname">Girona</label>
 		<label index="ESP.Las Palmas.localname">Las Palmas</label>
 		<label index="ESP.Guadalajara.localname">Guadalajara</label>
-		<label index="ESP.Guipuzcoa.localname">Guipuzcoa</label>
+		<label index="ESP.Guipuzcoa.localname">Guipúzcoa</label>
 		<label index="ESP.Huelva.localname">Huelva</label>
 		<label index="ESP.Huesca.localname">Huesca</label>
-		<label index="ESP.A Coru.localname">A Coru</label>
+		<label index="ESP.A Coru.localname">A Coruña</label>
 		<label index="ESP.La Rioja.localname">La Rioja</label>
-		<label index="ESP.Leon.localname">Leon</label>
+		<label index="ESP.Leon.localname">León</label>
 		<label index="ESP.Lugo.localname">Lugo</label>
 		<label index="ESP.Lleida.localname">Lleida</label>
 		<label index="ESP.Madrid.localname">Madrid</label>
@@ -195,23 +195,23 @@
 		<label index="MEX.GRO.localname">Guerrero</label>
 		<label index="MEX.HGO.localname">Hidalgo</label>
 		<label index="MEX.JAL.localname">Jalisco</label>
-		<label index="MEX.MEX.localname">M</label>
-		<label index="MEX.MICH.localname">Michoac</label>
+		<label index="MEX.MEX.localname">México</label>
+		<label index="MEX.MICH.localname">Michoacán</label>
 		<label index="MEX.MOR.localname">Morelos</label>
 		<label index="MEX.NAY.localname">Nayarit</label>
-		<label index="MEX.NL.localname">Nuevo Le</label>
+		<label index="MEX.NL.localname">Nuevo León</label>
 		<label index="MEX.OAX.localname">Oaxaca</label>
 		<label index="MEX.PUE.localname">Puebla</label>
-		<label index="MEX.QRO.localname">Quer</label>
+		<label index="MEX.QRO.localname">Querétaro</label>
 		<label index="MEX.QROO.localname">Quintana Roo</label>
-		<label index="MEX.SLP.localname">San Luis Potos</label>
+		<label index="MEX.SLP.localname">San Luis Potosí</label>
 		<label index="MEX.SIN.localname">Sinaloa</label>
 		<label index="MEX.SON.localname">Sonora</label>
 		<label index="MEX.TAB.localname">Tabasco</label>
 		<label index="MEX.TAMPS.localname">Tamaulipas</label>
 		<label index="MEX.TLAX.localname">Tlaxcala</label>
 		<label index="MEX.VER.localname">Veracruz</label>
-		<label index="MEX.YUC.localname">Yucat</label>
+		<label index="MEX.YUC.localname">Yucatán</label>
 		<label index="MEX.ZAC.localname">Zacatecas</label>
 		<label index="AUS.ACT.localname">Australian Capital Territory</label>
 		<label index="AUS.NSW.localname">New South Wales</label>
@@ -456,31 +456,31 @@
 		<label index="IRL.WEX.localname">Wexford</label>
 		<label index="IRL.WIC.localname">Wicklow</label>
 		<label index="BRA.AC.localname">Acre</label>
-		<label index="BRA.AP.localname">Amap</label>
+		<label index="BRA.AP.localname">Amapá</label>
 		<label index="BRA.AL.localname">Alagoas</label>
 		<label index="BRA.AM.localname">Amazonas</label>
 		<label index="BRA.BA.localname">Bahia</label>
-		<label index="BRA.CE.localname">Cear</label>
+		<label index="BRA.CE.localname">Ceará</label>
 		<label index="BRA.DF.localname">Distrito Federal</label>
-		<label index="BRA.ES.localname">Esp</label>
-		<label index="BRA.GO.localname">Goi</label>
-		<label index="BRA.MA.localname">Maranh</label>
+		<label index="BRA.ES.localname">Espírito Santo</label>
+		<label index="BRA.GO.localname">Goiás</label>
+		<label index="BRA.MA.localname">Maranhão</label>
 		<label index="BRA.MG.localname">Minas Gerais</label>
 		<label index="BRA.MS.localname">Mato Grosso do Sul</label>
 		<label index="BRA.MT.localname">Mato Grosso</label>
-		<label index="BRA.PA.localname">Par</label>
-		<label index="BRA.PB.localname">Para</label>
+		<label index="BRA.PA.localname">Pará</label>
+		<label index="BRA.PB.localname">Paraíba</label>
 		<label index="BRA.PE.localname">Pernambuco</label>
-		<label index="BRA.PI.localname">Piau</label>
-		<label index="BRA.PR.localname">Paran</label>
+		<label index="BRA.PI.localname">Piauí</label>
+		<label index="BRA.PR.localname">Paraná</label>
 		<label index="BRA.RJ.localname">Rio de Janeiro</label>
 		<label index="BRA.RN.localname">Rio Grande do Norte</label>
-		<label index="BRA.RO.localname">Rond</label>
+		<label index="BRA.RO.localname">Rondônia</label>
 		<label index="BRA.RR.localname">Roraima</label>
 		<label index="BRA.RS.localname">Rio Grande do Sul</label>
 		<label index="BRA.SC.localname">Santa Catarina</label>
 		<label index="BRA.SE.localname">Sergipe</label>
-		<label index="BRA.SP.localname">S</label>
+		<label index="BRA.SP.localname">São Paulo</label>
 		<label index="BRA.TO.localname">Tocantins</label>
 	</labels>
 	<labels lang="de"></labels>
