* locale typo fixes

--- a/core/locale/static_territory.xml
+++ b/core/locale/static_territory.xml
@@ -33,7 +33,7 @@
 	<labels lang="de">
 		<label index="num2.name">Afrika</label>
 		<label index="num9.name">Ozeanien</label>
-		<label index="num19.name">Nord-, Mittel- und S</label>
+		<label index="num19.name">Nord-, Mittel- und Südamerika</label>
 		<label index="num142.name">Asien</label>
 		<label index="num150.name">Europa</label>
 		<label index="num30.name">Ostasien</label>
