--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -74,10 +74,6 @@
 		<label index="update.button">Start Update</label>
 		<label index="update.info">Apply Database Changes for Your Current Version and Compare Current Columns with File Configuration</label>
 		<label index="update.step">Update todoyu Installation</label>
-		<label index="updateconfigfiles.title">Check Config files</label>
-		<label index="updateconfigfiles.step">Check Config files</label>
-		<label index="updateconfigfiles.info">Apply Database Changes for Your Current Version</label>
-		<label index="updateconfigfiles.button">Proceed With Database Updates</label>
 		<label index="updatetocurrentversion.title">Update Database</label>
 		<label index="updatetocurrentversion.button">Apply Database Changes</label>
 		<label index="updatetocurrentversion.button.noupdates">No Updates, proceed</label>
@@ -169,10 +165,6 @@
 		<label index="update.button">Aktualisierung starten</label>
 		<label index="update.info">Änderungen der Datenbank der vorliegenden Version durchführen und mit Datei-Konfiguration abgleichen</label>
 		<label index="update.step">todoyu Installation aktualisieren</label>
-		<label index="updateconfigfiles.title">Konfigurationsdateien überprüfen</label>
-		<label index="updateconfigfiles.step">Konfigurationsdateien überprüfen</label>
-		<label index="updateconfigfiles.info">Änderungen der Datenbank der vorliegenden Version durchführen</label>
-		<label index="updateconfigfiles.button">Weiter mit den Datenbankupdates</label>
 		<label index="updatetocurrentversion.title">Datenbank aktualisieren</label>
 		<label index="updatetocurrentversion.button">Datenbank-Änderungen durchführen</label>
 		<label index="updatetocurrentversion.button.noupdates">Keine Aktualisierung, weiter</label>
@@ -181,7 +173,7 @@
 		<label index="updatetocurrentversion.newTables">Neue Tabellen</label>
 		<label index="updatetocurrentversion.newColumns">Neue Spalten</label>
 		<label index="updatetocurrentversion.changedColumns">Geänderte Spalten</label>
-		<label index="updatetocurrentversion.missingKeys">Fehlene Tabellen-Indexe</label>
+		<label index="updatetocurrentversion.missingKeys">Fehlende Tabellen-Indexe</label>
 		<label index="updatetocurrentversion.step">Datenbankstruktur aktualisieren</label>
 		<label index="finishupdate.title">Aktualisieren beenden</label>
 		<label index="finishupdate.text">Der Installer hat Ihre todoyu Installation aktualisiert</label>
